generate-content/answer.txt
  File "text.py", line 5
    if __name__ == '__main__':
     ^
IndentationError: expected an indented block
